--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,3 +111,8 @@ code {
   background-color: rgb(var(--mui-palette-info-mainChannel) / 0.08);
   border: 0;
 }
+
+.leaflet-container {
+  height: 1000px;
+  width: 100%;
+}
